--- a/Microscopy Data.Rmd
+++ b/Microscopy Data.Rmd
@@ -427,7 +427,7 @@ ResultsData1<-rbind(wtResults1,mutResults1)
 cleanResults1<-ResultsData1 %>% group_by(TimePoint,Sample,Strain,Condition,Species) %>% summarise(Totals = sum (Value))%>% mutate(LogTotals = ifelse(Totals>0, log10(Totals), 0))#this adds up all the data on each slice and then gets the log of that total
 cleanResultsStats1<-cleanResults1 %>% group_by(TimePoint,Strain,Condition,Species) %>% summarise(MeanTotals = mean(Totals), SDTotals = sd(Totals), MeanLogTotals = mean(LogTotals), SDLogTotals = sd(LogTotals)) %>% mutate(MeanLogTotalsRevd = 10^MeanLogTotals, SDLogTotalsRevd =10^(SDLogTotals))
 #Graph
-#This Graphs 
+#This Graphs the raw results
 GraphGrowthCurves(cleanResults%>%filter(Strain%in%c("PA14wt","PA14mut")),cleanResultsStats%>%filter(Strain%in%c("PA14wt","PA14mut")),"Sa")
 GraphGrowthCurves(cleanResults1,cleanResultsStats1, "Sa")
 #This graphs the mean of the log totals along with the log of the totals themselves
@@ -444,6 +444,8 @@ ggplot()+
   geom_smooth(data=cleanResultsSaMono1, aes(x=TimePoint, y=Totals), size=3, color = "red")+
   scale_y_log10(limits= c(1e4,1e7), name=expression(paste('Biomass from voxel counts' )), breaks = c(10^(seq(5,10,.5))), labels = scales::trans_format("log10", scales::math_format(10^.x)))+
   labs(title =expression(paste(italic("S. aureus"), " growth in mono in SCFM2" )),  x = "Time (hours)",shape = "Culture condition", color = "Antiobiotic/Control") 
+
+#Now for Pa
 GraphGrowthCurvesExp(cleanResults1,cleanResultsStats1, "Pa")
 GraphGrowthCurvesExpClean(cleanResults1,cleanResultsStats1, "Pa")
 GraphGrowthCurvesExpCleanCoCulture<-function (dataStats){
@@ -452,12 +454,14 @@ GraphGrowthCurvesExpCleanCoCulture<-function (dataStats){
     labs(title =paste("Growth in SCFM2" ),  x = "Time (hours)",shape = "Culture condition", color = "Antiobiotic/Control")+
     facet_grid(.~Condition)
 }
-GraphGrowthCurvesExpCleanCoCulture(cleanResultsStats)
+GraphGrowthCurvesExpCleanCoCulture(cleanResultsStats1)
+
+
 ```
-#This 
-```{r new threshold images aggregates data}
+#Functions for histograms
+```{r new threshold images aggregates functions and data collection}
 GetAggregates<-function(sample, samplename){
-  folder<- paste0('/media/whiteley/Samsung USB/Juan Data/',sample,'/aggregateSizes1')
+  folder<- paste0('/Users/jupabago/Documents/Whiteley/PROJECTS/Spatial paper Data/Microscopy Data/Other Data1/', sample, '/aggregateSizes1')
   fileList<-list.files(path = folder, full.names = TRUE)
   growthDf<-data.frame()
   for (position in 0:5){
@@ -471,6 +475,90 @@ GetAggregates<-function(sample, samplename){
 return(growthDf)
 }
 
+wtAggregates1<-MapAggregates(PA14wt, names3)
+mutAggregates1<-MapAggregates(PA14mut, names3)
+allAggregates<-bind_rows(wtAggregates1,mutAggregates1)
+allAggregates1<-allAggregates %>% filter(!Size<0.5) %>% filter(!(Position==1 & Species=="Sa")) %>% filter(!(Position==0 & Species=="Pa"))%>% filter(!Species =="")
+allAggregates1$Strain<-as.factor(allAggregates1$Strain)
+allAggregates1$Sample<-as.factor(allAggregates1$Sample)
+allAggregates1$TimePoint<-as.factor(allAggregates1$TimePoint)
+allAggregates1$Position<-as.factor(allAggregates1$Position)
+allAggregates1<-allAggregates1 %>% mutate(Condition = recode(Position, "0" = "Sa Mono", "1" = "Pa Mono", "2" = "Pa:Sa 1:1", "3" = "Pa:Sa 10:1", "4" = "Pa:Sa 1:100", "5" = "Pa:Sa 1:10" ))
+
+```
+
+
+```{r new threshold agggregates, include=FALSE}
+#get some stats on aggregates
+allDataSummary<-allAggregates1 %>% group_by(Species, Condition, TimePoint, Sample, Strain) %>% summarise(Aggs = n(), biomass = sum(Size), meanAggSize = mean(Size), sDAggSize = sd(Size), maxSize = max(Size), minSize = min(Size))
+
+##Figure 6
+#Summary figure for total aggregate numbers
+ggplot()+
+  geom_jitter(data = allDataSummary, aes(x = TimePoint, y= Aggs, color = Species, shape = Strain), width = 0, height = 0)+
+  geom_smooth(data = allDataSummary, aes(x = TimePoint, y= Aggs, color = Species, linetype = Strain, group = interaction(Species, Strain)))+
+  facet_wrap(.~Condition)+
+  scale_y_continuous(limits= c(0,1e4))+
+  ggtitle('Number of aggregates per experiment')+
+  labs(x = "Time (hours)",y = "Number of Aggregates") 
+#this is a decent outline of the aggregates but I need to still subset it
+ggplot()+
+  geom_point(data = allDataSummary, aes(x = TimePoint, y= meanAggSize, color = Species,shape = "Mean"))+
+  geom_point(data = allDataSummary, aes(x = TimePoint, y= maxSize, color = Species, shape = "Max"))+
+  geom_point(data = allDataSummary, aes(x = TimePoint, y= biomass, color = Species, shape = "Total"))+  
+  geom_smooth(data = allDataSummary, aes(x = TimePoint, y= meanAggSize, color = Species, linetype = Strain, group = interaction(Species)))+
+  facet_wrap(Strain~Condition)+
+  scale_y_log10( breaks = scales::trans_breaks("log10", function(x) 10^x), labels = scales::trans_format("log10", scales::math_format(10^.x)))+
+  ggtitle('Aggregates summary: Mean, largest and total biomass')+
+  labs(x = "Time (hours)",y = "Biomass")+
+  scale_shape_manual(name="Metric",values=c(Mean=1, Max=2, Total=17)) 
+  
+#this led me to introduce another metric: ratio of largest aggregate to total biomass
+allDataSummary<-allDataSummary %>% mutate(RatioMaxTotal = maxSize/biomass )
+
+ggplot()+
+  geom_jitter(data = allDataSummary, aes(x = TimePoint, y= RatioMaxTotal, color = Species, shape = Strain), width = 0, height = 0)+
+  geom_hline(yintercept=1, linetype = "dashed")+
+  geom_smooth(data = allDataSummary, aes(x = TimePoint, y= RatioMaxTotal, color = Species, linetype = Strain, group = interaction(Species, Strain)))+
+  facet_wrap(.~Condition)+
+  ggtitle('Ratio of largest aggregate to total biomass')+
+  labs(x = "Time (hours)",y = "Proportion of largest aggregate to total biomass")
+#this seems to have a lot of noise, how does that compare to actual biomass?
+ggplot()+
+  geom_jitter(data = allDataSummary, aes(x = TimePoint, y= biomass, color = Species, shape = Strain), width = 0, height = 0)+
+  geom_smooth(data = allDataSummary, aes(x = TimePoint, y= biomass, color = Species, linetype = Strain, group = interaction(Species, Strain)))+
+  scale_y_log10( breaks = scales::trans_breaks("log10", function(x) 10^x), labels = scales::trans_format("log10", scales::math_format(10^.x)))+
+  facet_wrap(.~Condition)+
+  ggtitle("Total biomass")+
+  labs(x = "Time (hours)",y = "Total biomass")
+```
+
+#Aggregate histograms
+```{r Aggregate histograms functions}
+FancyHistogram<-function(df, sec){#my own way of doing histograms which includes the sum and mean of values whitin each bin
+  results<-data.frame()
+  for( i in 1:(length(sec)-1)){
+    df %>% filter(Size > sec[i] &Size<=sec[i+1])%>%summarise(frequency = n(), avg = mean(Size),suma = sum(Size)) %>% mutate(bin = i, min = sec[i],max = sec[i+1])->blah 
+    if(blah$frequency>0){
+    results<-rbind(results, blah)}
+  }
+  return(results)
+  }
+TotalFancyHistogram<-function(df,binsize){
+  totalbiomass<-sum(df$Size)#total biomass per sample
+  totalfrequency<-length(df$Size)#total number of objects
+  upperLim<-max(df$Size)+binsize-(max(df$Size)%%binsize)#largest bin size based in largest object
+  breaksSequence<-seq(0,upperLim,binsize)#this makes breaks every "binsize" 
+  histogram<-FancyHistogram(df,breaksSequence)#apply "fancy histogram" to get distributions
+  histogram%>%mutate(BiomassBin=suma/totalbiomass)->histogram#add column with proportion of biomas per bin
+  histogram%>%mutate(Density=frequency/totalfrequency)->histogram#add column with proportion of counts per bin
+  histogram%>%mutate(Species=df$Species[1])->histogram#add column maintaining sample and so on...
+  histogram%>%mutate(Condition=df$Condition[1])->histogram
+  histogram%>%mutate(TimePoint=df$TimePoint[1])->histogram
+  histogram%>%mutate(Sample=df$Sample[1])->histogram
+  histogram%>%mutate(Strain=df$Strain[1])->histogram
+  return(histogram)
+}
 TotalHistogram<-function(df){
   biomass<-df$Size
   totalbiomass<-sum(biomass)
@@ -485,93 +573,111 @@ TotalHistogram<-function(df){
   histogram%>%mutate(NormBiomassBin=BiomassBin/totalbiomass)->histogram
   return(histogram)
 }
-wtAggregates1<-MapAggregates(PA14wt, names3)
-mutAggregates1<-MapAggregates(PA14mut, names3)
-allAggregates<-bind_rows(wtAggregates1,mutAggregates1)
-allAggregates1<-allAggregates %>% filter(!Size<0.5) %>% filter(!(Position==1 & Species=="Sa")) %>% filter(!(Position==0 & Species=="Pa"))%>% filter(!Species =="")
-allAggregates1$Strain<-as.factor(allAggregates1$Strain)
-allAggregates1$Sample<-as.factor(allAggregates1$Sample)
-allAggregates1$TimePoint<-as.factor(allAggregates1$TimePoint)
-allAggregates1$Position<-as.factor(allAggregates1$Position)
-allAggregates1<-allAggregates1 %>% mutate(Condition = recode(Position, "0" = "Sa Mono", "1" = "Pa Mono", "2" = "Pa:Sa 1:1", "3" = "Pa:Sa 10:1", "4" = "Pa:Sa 1:100", "5" = "Pa:Sa 1:10" ))
 
-#get some stats on aggregates
-allDataSummary<-allAggregates1 %>% group_by(Species, Condition, TimePoint, Sample, Strain) %>% summarise(Aggs = n(), biomass = sum(Size), meanAggSize = mean(Size), sDAggSize = sd(Size), maxSize = max(Size), minSize = min(Size))
-#group them to get histograms for each experiment
+##This is done just once, afterwards I just pull them up from the csv file since it takes some time to get them.
+#group them to get histograms for each experimental condition
 allData<-allAggregates1 %>% group_by(Species, Condition, TimePoint, Sample, Strain)#first do the correct grouping
-yas<- group_split(allData)#create list of dataframes
-allDataHistograms<-map(yas, TotalHistogram)#apply histogram function to all items in the list
+aggregatesList<- group_split(allData)#create list of dataframes
+allDataHistograms.5<-map2(aggregatesList, 5,TotalFancyHistogram)#apply histogram function to all items in the list
+allDataHistograms.10<-map2(aggregatesList, 10,TotalFancyHistogram)#apply histogram function to all items in the list
+allDataHistograms.50<-map2(aggregatesList, 50,TotalFancyHistogram)#apply histogram function to all items in the list
+allDataHistograms.100<-map2(aggregatesList, 100,TotalFancyHistogram)#apply histogram function to all items in the list
 
+allDataHistograms.5df<- bind_rows(allDataHistograms.5)
+allDataHistograms.10df<- bind_rows(allDataHistograms.10)
+allDataHistograms.50df<- bind_rows(allDataHistograms.50)
+allDataHistograms.100df<- bind_rows(allDataHistograms.100)
 
+write.csv(allDataHistograms.5df, file = '/Users/jupabago/Documents/Whiteley/PROJECTS/Spatial paper Data/Microscopy Data/Histograms1/histograms5.csv')
+write.csv(allDataHistograms.10df,file = '/Users/jupabago/Documents/Whiteley/PROJECTS/Spatial paper Data/Microscopy Data/Histograms1/histograms10.csv')
+write.csv(allDataHistograms.50df,file = '/Users/jupabago/Documents/Whiteley/PROJECTS/Spatial paper Data/Microscopy Data/Histograms1/histograms50.csv')
+write.csv(allDataHistograms.100df,file = '/Users/jupabago/Documents/Whiteley/PROJECTS/Spatial paper Data/Microscopy Data/Histograms1/histograms100.csv')
 ```
 
-```{r new threshold images aggregates graph}
-ggplot()+
-  geom_jitter(data = allDataSummary, aes(x = TimePoint, y= Aggs, color = Species, shape = Strain), width = 0, height = 0)+
-  geom_smooth(data = allDataSummary, aes(x = TimePoint, y= Aggs, color = Species, linetype = Strain, group = interaction(Species, Strain)))+
-  facet_wrap(.~Condition)+
-  ggtitle('Number of aggregates per experiment')+
-  labs(x = "Time (hours)",y = "Number of Aggregates") 
-
-#this is a decent outline of the aggregates but I need to still subset it
-ggplot()+
-  geom_point(data = allDataSummary, aes(x = TimePoint, y= meanAggSize, color = Species,shape = "Mean"))+
-  geom_point(data = allDataSummary, aes(x = TimePoint, y= maxSize, color = Species, shape = "Max"))+
-  geom_point(data = allDataSummary, aes(x = TimePoint, y= biomass, color = Species, shape = "Total"))+  
-  geom_smooth(data = allDataSummary, aes(x = TimePoint, y= meanAggSize, color = Species, linetype = Strain, group = interaction(Species)))+
-  facet_wrap(Strain~Condition)+
-  scale_y_log10( breaks = scales::trans_breaks("log10", function(x) 10^x), labels = scales::trans_format("log10", scales::math_format(10^.x)))+
-  ggtitle('Aggregates summary: Mean, largest and total biomass')+
-  labs(x = "Time (hours)",y = "Number of Aggregates")+
-  scale_shape_manual(name="Metric",values=c(Mean=1, Max=2, Total=17)) 
+```{r new threshold images histogram plots}
+allDataHistograms.5df<-read.csv(file='/Users/jupabago/Documents/Whiteley/PROJECTS/Spatial paper Data/Microscopy Data/Histograms1/histograms5.csv',header=T)
+allDataHistograms.10df<-read.csv(file='/Users/jupabago/Documents/Whiteley/PROJECTS/Spatial paper Data/Microscopy Data/Histograms1/histograms10.csv',header=T)
+allDataHistograms.50df<-read.csv(file='/Users/jupabago/Documents/Whiteley/PROJECTS/Spatial paper Data/Microscopy Data/Histograms1/histograms50.csv',header=T)
+allDataHistograms.100df<-read.csv(file='/Users/jupabago/Documents/Whiteley/PROJECTS/Spatial paper Data/Microscopy Data/Histograms1/histograms100.csv',header=T)
+allDataHistograms.100df<-allDataHistograms.100df %>% mutate(Coculture = recode(Condition, "Sa Mono" = "No", "Pa Mono" = "No", "Pa:Sa 1:1" = "Yes","Pa:Sa 10:1"= "Yes", "Pa:Sa 1:100" = "Yes", "Pa:Sa 1:10" = "Yes"))
+allDataHistograms.5df<-allDataHistograms.5df %>% mutate(Coculture = recode(Condition, "Sa Mono" = "No", "Pa Mono" = "No", "Pa:Sa 1:1" = "Yes","Pa:Sa 10:1"= "Yes", "Pa:Sa 1:100" = "Yes", "Pa:Sa 1:10" = "Yes"))
   
-#this led me to introduce another metric: ratio of largest aggregate to total biomass
-allDataSummary<-allDataSummary %>% mutate(RatioMaxTotal = maxSize/biomass )
-
-ggplot()+
-  geom_jitter(data = allDataSummary, aes(x = TimePoint, y= RatioMaxTotal, color = Species, shape = Strain), width = 0, height = 0)+
-  geom_smooth(data = allDataSummary, aes(x = TimePoint, y= RatioMaxTotal, color = Species, linetype = Strain, group = interaction(Species, Strain)))+
-  facet_wrap(.~Condition)+
-  ggtitle('Ratio of largest aggregate to total biomass')+
-  labs(x = "Time (hours)",y = "Proportion of largest aggregate to total biomass")
-#this seems to have a lot of noise, how does that compare to actual biomass?
-ggplot()+
-  geom_jitter(data = allDataSummary, aes(x = TimePoint, y= biomass, color = Species, shape = Strain), width = 0, height = 0)+
-  geom_smooth(data = allDataSummary, aes(x = TimePoint, y= biomass, color = Species, linetype = Strain, group = interaction(Species, Strain)))+
-  scale_y_log10( breaks = scales::trans_breaks("log10", function(x) 10^x), labels = scales::trans_format("log10", scales::math_format(10^.x)))+
-  facet_wrap(.~Condition)+
-  ggtitle("Total biomass")+
-  labs(x = "Time (hours)",y = "Total biomass")
-
+plotHist3DBiomassCountsLog<-function(df1, title){
+  ggplot()+
+    geom_point(data=df1,aes(x=max, y=frequency, color = Coculture, shape = Condition))+
+    scale_y_log10(breaks = scales::trans_breaks("log10", function(x) 10^x), labels = scales::trans_format("log10", scales::math_format(10^.x)))+
+    scale_x_log10(breaks = scales::trans_breaks("log10", function(x) 10^x), labels = scales::trans_format("log10", scales::math_format(10^.x)))+
+    xlab('Biomass (um^3)')+
+    ylab('Frequency')+
+    ggtitle(paste0(title," Raw biomass Distribution (bin size = 100 um)"))+
+    facet_wrap(~TimePoint, nrow=4)
+}
+#This shows that the Sa biomass that gets eaten by Staph is from the largest aggregates, not from the small ones
+plotHist3DBiomassCountsLog(allDataHistograms.100df %>% filter(Species == "Sa"), "Sa co-culture vs mono")
+plotHist3DBiomassCountsLog(allDataHistograms.100df %>% filter(Species == "Pa"), "Pa co-culture vs mono")
 
 plotHist3DBiomassCounts<-function(df1, title){
   ggplot()+
-    geom_point(data=df1,aes(x=Midpoint, y=Counts, color = source))+
-    scale_y_log10(name=expression(paste('counts' )), breaks = scales::trans_breaks("log10", function(x) 10^x), labels = scales::trans_format("log10", scales::math_format(10^.x)))+
-    scale_x_log10(breaks = scales::trans_breaks("log10", function(x) 10^x), labels = scales::trans_format("log10", scales::math_format(10^.x)))+
+    geom_point(data=df1,aes(x=max, y=frequency, color = Strain, shape = Sample))+
+    scale_y_log10(breaks = scales::trans_breaks("log10", function(x) 10^x), labels = scales::trans_format("log10", scales::math_format(10^.x)))+
     xlab('Biomass (um^3)')+
-    ylab('Counts')+
-    ggtitle(paste0("Raw biomass Distribution (bin size = 10 um) ",title))
-    #facet_wrap(~TimePoint, nrow=4)
-  }
-plotHist3DBiomassBinBiomass<-function(df1, title){
+    ylab('Frequency')+
+    ggtitle(paste0(title," Raw biomass Distribution (bin size = 5 um)"))+
+    facet_wrap(~TimePoint, nrow=4)
+}
+#this shows how different ratios work to delay the dissapearance of large aggregates of staph in the samples
+plotHist3DBiomassCounts(allDataHistograms.5df%>%filter(Species=="Sa") %>% filter(Condition == "Pa:Sa 1:100")%>% filter(max<101),"Sa in Pa:Sa 1:100 only")
+plotHist3DBiomassCounts(allDataHistograms.5df%>%filter(Species =="Sa") %>% filter(Condition=="Pa:Sa 1:10")%>% filter(max<101),"Sa in Pa:Sa 1:10 only")
+plotHist3DBiomassCounts(allDataHistograms.5df%>%filter(Species == "Sa") %>%filter(Condition=="Pa:Sa 10:1")%>% filter(max<101),"Sa in Pa:Sa 10:1 only")
+#this shows how early or late large aggregates of pseudomonas appear according to the ratio
+plotHist3DBiomassCounts(allDataHistograms.5df%>%filter(Species=="Pa") %>% filter(Condition == "Pa:Sa 1:100")%>% filter(max<101),"Pa in Pa:Sa 1:100 only")
+plotHist3DBiomassCounts(allDataHistograms.5df%>%filter(Species =="Pa") %>% filter(Condition=="Pa:Sa 1:10")%>% filter(max<101),"Pa in Pa:Sa 1:10 only")
+plotHist3DBiomassCounts(allDataHistograms.5df%>%filter(Species == "Pa") %>%filter(Condition=="Pa:Sa 10:1")%>% filter(max<101),"Pa in Pa:Sa 10:1 only")
+
+#This plots how much biomass is on each bin, it should be exponential in y-axis, but I don't think it is super useful
+plotHist3DBiomassBinBiomass<-function(df1, title, binSize){
   ggplot()+
-    geom_point(data=df1,aes(x=Midpoint, y=BiomassBin, color = source))+
-    scale_y_log10(name=expression(paste('counts' )), breaks = scales::trans_breaks("log10", function(x) 10^x), labels = scales::trans_format("log10", scales::math_format(10^.x)))+
+    geom_point(data=df1,aes(x=max, y=suma, color = Strain, shape = Condition))+
+    scale_y_log10(breaks = scales::trans_breaks("log10", function(x) 10^x), labels = scales::trans_format("log10", scales::math_format(10^.x)))+
     scale_x_log10(breaks = scales::trans_breaks("log10", function(x) 10^x), labels = scales::trans_format("log10", scales::math_format(10^.x)))+
-    xlab('Biomass (um^3)')+
-    ylab('Counts')+
-    ggtitle(paste0("Raw biomass Distribution (bin size = 10 um) ",title))
-    #facet_wrap(~TimePoint, nrow=4)
-  }
-plotHist3DBiomassNormBinBiomass<-function(df1, title){
+    xlab('Bin size')+
+    ylab('Biomass (um^3)')+
+    ggtitle(paste0("Total Biomass per bin (bin size = ",binSize," um) ",title))+
+    facet_wrap(~TimePoint, nrow=4)
+}
+plotHist3DBiomassBinBiomass(allDataHistograms.100df %>% filter(Species == "Sa") %>% filter (Coculture=="No"), "Sa co-culture vs mono", "100")
+
+#This shows how much of the total biomass is on each bin. it should just go from 0 to one, so not a great idea to make it exponential.
+plotHist3DBiomassNormBinBiomass<-function(df1, title, binSize){
   ggplot()+
-    geom_point(data=df1,aes(x=Midpoint, y=NormBiomassBin))+
-    #scale_y_log10(name=expression(paste('counts' )), breaks = scales::trans_breaks("log10", function(x) 10^x), labels = scales::trans_format("log10", scales::math_format(10^.x)))+
+    geom_point(data=df1,aes(x=max, y=BiomassBin, color = Strain, shape = Sample))+
+    scale_y_log10(breaks = scales::trans_breaks("log10", function(x) 10^x), labels = scales::trans_format("log10", scales::math_format(10^.x)))+
     scale_x_log10(breaks = scales::trans_breaks("log10", function(x) 10^x), labels = scales::trans_format("log10", scales::math_format(10^.x)))+
-    xlab('Biomass (um^3)')+
-    ylab('Counts')+
-    ggtitle(paste0("Raw biomass Distribution (bin size = 10 um) ",title))
-    #facet_wrap(~TimePoint, nrow=4)
-  }
+    xlab('Bin size')+
+    ylab('Contribution to total biomass')+
+    ggtitle(paste0("Biomass contribution per bin (bin size = ",binSize," um) ",title))+
+    facet_wrap(~TimePoint, nrow=4)
+}
+#binsize of 100
+plotHist3DBiomassNormBinBiomass(allDataHistograms.100df %>% filter(Species == "Sa") %>% filter (Coculture=="No"), "Sa mono culture", "100")
+plotHist3DBiomassNormBinBiomass(allDataHistograms.100df %>% filter(Species == "Pa") %>% filter (Coculture=="No"), "Pa mono culture", "100")
+
+plotHist3DBiomassNormBinBiomass<-function(df1, title, binSize){
+  ggplot()+
+    geom_point(data=df1,aes(x=max, y=BiomassBin, color = Strain, shape = Condition))+
+    scale_y_log10(breaks = scales::trans_breaks("log10", function(x) 10^x), labels = scales::trans_format("log10", scales::math_format(10^.x)))+
+    scale_x_log10(breaks = scales::trans_breaks("log10", function(x) 10^x), labels = scales::trans_format("log10", scales::math_format(10^.x)))+
+    xlab('Bin size')+
+    ylab('Contribution to total biomass')+
+    ggtitle(paste0("Biomass contribution per bin (bin size = ",binSize," um) ",title))+
+    facet_wrap(~TimePoint, nrow=4)
+}
+plotHist3DBiomassNormBinBiomass(allDataHistograms.100df %>% filter(Species == "Sa") %>% filter (Coculture=="Yes"), "Sa co-cultures", "100")
+plotHist3DBiomassNormBinBiomass(allDataHistograms.100df %>% filter(Species == "Pa") %>% filter (Coculture=="Yes"), "Pa co-cultures", "100")
+
+#binsize of 5
+plotHist3DBiomassNormBinBiomass(allDataHistograms.5df%>% filter(Species == "Sa") %>% filter (Coculture=="No")%>% filter(max<101), "Sa mono culture", "5")
+plotHist3DBiomassNormBinBiomass(allDataHistograms.5df%>% filter(Species == "Pa") %>% filter (Coculture=="No")%>% filter(max<101), "Pa mono culture", "5")
+
+
 ```
